Fixed alignment issues

--- a/src/Components/Portfolio/Portfolio.css
+++ b/src/Components/Portfolio/Portfolio.css
@@ -32,9 +32,9 @@
   }
 }
 
-@media(max-width: 700px) {
+@media(max-width: 500px) {
   .workContainer {
-    width: 400px;
+    width: 350px;
     display: flex;
     justify-content: center;
   }
